# colcon-metadata

./: .travis.yml  README.rst  appveyor.yml  setup.cfg  stdeb.cfg
colcon_metadata/: __init__.py
colcon_metadata/metadata/: __init__.py  colcon_meta.py  colcon_pkg.py  repository.py
colcon_metadata/package_discovery/: colcon_meta.py
colcon_metadata/subverb/: update.py
test/: spell_check.words  test_flake8.py  test_spell_check.py
