[metadata]
name = colcon-metadata
version = attr: colcon_metadata.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-metadata/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-metadata/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to read package metadata from files.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core
  PyYAML
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
junit_suite_name = colcon-metadata

[options.entry_points]
colcon_core.extension_point =
    colcon_metadata.subverb = colcon_metadata.subverb:MetadataSubverbExtensionPoint
colcon_core.package_augmentation =
    colcon_meta = colcon_metadata.metadata.colcon_meta:ColconMetadataPackageIdentification
    colcon_pkg = colcon_metadata.metadata.colcon_pkg:ColconPkgPackageIdentification
colcon_core.package_discovery =
    colcon_meta = colcon_metadata.package_discovery.colcon_meta:ColconMetadataDiscovery
colcon_core.package_identification =
    colcon_meta = colcon_metadata.metadata.colcon_meta:ColconMetadataPackageIdentification
    colcon_pkg = colcon_metadata.metadata.colcon_pkg:ColconPkgPackageIdentification
colcon_core.verb =
    metadata = colcon_metadata.verb.metadata:MetadataVerb
colcon_metadata.subverb =
    add = colcon_metadata.subverb.add:AddMetadataSubverb
    list = colcon_metadata.subverb.list:ListMetadataSubverb
    remove = colcon_metadata.subverb.remove:RemoveMetadataSubverb
    update = colcon_metadata.subverb.update:UpdateMetadataSubverb

[flake8]
import-order-style = google

[coverage:run]
source = colcon_metadata
